change;プロフィールを自分のものに変更した

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <title>電算太郎のプロフィール</title>
   </head>
   <body>
-    <h1>電算太郎のプロフィール</h1>
+    <h1>Medetaiyakiのプロフィール</h1>
     <dl>
       <!--
         以下の情報は後々インターネットに公開されるので
         留意して編集してください
       -->
       <dt>名前</dt>
-      <dd>電算太郎</dd>
+      <dd>Medetaiyaki</dd>
 
       <dt>出身</dt>
-      <dd>晴れの国</dd>
+      <dd>天の国</dd>
 
       <dt>入学年度</dt>
-      <dd>19xx年</dd>
+      <dd>20xx年</dd>
 
       <dt>所属</dt>
       <dd>工学部</dd>
@@ -27,10 +27,10 @@
       <dd>xx月xx日</dd>
 
       <dt>趣味</dt>
-      <dd>プログラミング，電子工作</dd>
+      <dd>ギター，ゲーム</dd>
 
       <dt>コメント</dt>
-      <dd>にゃんぷっぷー</dd>
+      <dd>こんにちは</dd>
     </dl>
   </body>
 </html>
